# Multi-source-Candidate-Data-Transformer

./: .gitignore  README.md  main.py  pipeline.py  pyproject.toml  requirements.txt
cli/: __init__.py  app.py
confidence/: __init__.py  scorer.py
config/: __init__.py  compact.json  default.json  settings.py
input/: ats.json  candidates.csv  resume.txt
mapper/: __init__.py  canonical_mapper.py
merge/: __init__.py  matcher.py  merger.py
models/: __init__.py  candidate.py  source.py
normalizer/: __init__.py  service.py
parsers/: __init__.py  ats_parser.py  base.py  csv_parser.py  resume_parser.py
projection/: __init__.py  projector.py
tests/: test_cli.py  test_match_and_merge.py  test_normalizer.py  test_parsers_and_mapper.py  test_pipeline.py  test_projection_validation.py
utils/: __init__.py  io.py
validator/: __init__.py  candidate_schema.json  schema_validator.py
