[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-profile-aggregation-pipeline"
version = "1.0.0"
description = "Deterministic aggregation of heterogeneous candidate data"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6,<3",
  "pandas>=2.1,<3",
  "jsonschema>=4.20,<5",
  "phonenumbers>=8.13,<9",
  "python-dateutil>=2.8,<3",
  "rapidfuzz>=3.6,<4",
  "pypdf>=4,<6",
  "pycountry>=23.12",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7"]

[project.scripts]
candidate-pipeline = "cli.app:main"

[tool.setuptools]
py-modules = ["main", "pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["parsers*", "models*", "mapper*", "normalizer*", "merge*", "confidence*", "projection*", "validator*", "config*", "utils*", "cli*"]

[tool.setuptools.package-data]
validator = ["candidate_schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
